# vgi-units

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-entrypoint.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-publish.yml  release.yml
ci/: README.md  check-version.sh  run-integration.sh
crates/units-wasm/: Cargo.toml
crates/units-wasm/src/: lib.rs
crates/units-worker/: Cargo.toml
crates/units-worker/src/: arrow_io.rs  lib.rs  main.rs  meta.rs  units.rs
crates/units-worker/src/scalar/: analysis.rs  convert.rs  mod.rs  parse.rs  version.rs
crates/units-worker/src/table/: mod.rs  supported.rs
crates/units-worker/tests/: conversions.rs
test/sql/: analysis.test  convert.test
wasm/: build.sh
