[workspace]
resolver = "2"
members = ["crates/units-worker"]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.90"
license = "MIT"
authors = ["Query Farm LLC <hello@query.farm>"]
repository = "https://github.com/Query-farm/vgi-units"

[workspace.dependencies]
# VGI Rust SDK (worker side), published on crates.io. Pulls in vgi-rpc 0.7 and
# arrow 59 transitively; keep arrow/vgi-rpc here in lockstep with vgi's pins so a
# single arrow/vgi-rpc resolves.
vgi = "0"
vgi-rpc = { version = "0", default-features = false, features = ["macros", "http"] }
arrow-array = "59"
arrow-buffer = "59"
arrow-schema = "59"

[profile.release]
opt-level = 2
# Strip symbols + debug info from the release binary: ~17MB -> ~14MB (and the
# published .tar.gz ~5.6MB -> ~4.9MB). The worker has no need for in-binary
# backtraces in production; build a debug profile locally if you need symbols.
strip = true
