[package]
name = "units-worker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "VGI worker bringing runtime physical-unit conversion and dimensional analysis to DuckDB over Apache Arrow"

[[bin]]
name = "units-worker"
path = "src/main.rs"

[dependencies]
vgi.workspace = true
vgi-rpc.workspace = true
arrow-array.workspace = true
arrow-buffer.workspace = true
arrow-schema.workspace = true
log = "0.4"
env_logger = "0.11"
